--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Sponsor</a></li>
-							<li><a href="generic.html">Support Us</a></li>
-							<li><a href="generic.html">Contact</a></li>
+							<li><a href="sponsors.html">Sponsors</a></li>
+							<li><a href="SupportUs.html">Support Us</a></li>
 						</ul>
 					</nav>
 
@@ -98,9 +97,9 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Aliquam</h2>
+										<h2>Choosing Schools</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p> Accepted to multiple schools?Great!! Shaan and Omar discuss how to pick the best school for you. </p>
 										</div>
 									</a>
 								</article>
@@ -109,9 +108,9 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Veroeros</h2>
+										<h2>Gap Year(s) vs Straight Through</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>How to decide whether or not to take a gap year or go straight through</p>
 										</div>
 									</a>
 								</article>
@@ -125,7 +124,7 @@
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-								<form method="post" action="#">
+								<form method="post" action="contactus.php">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -142,14 +141,7 @@
 									</ul>
 								</form>
 							</section>
-							<section>
-								<h2></h2>
-								<ul class="icons">
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
+							
 						</div>
 					</footer>
 
