--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 								<form method="post" action="contactus.php">
 									<div class="fields">
 										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
+											<input type="text" name="name" id="name" placeholder="Name1" />
 										</div>
 										<div class="field half">
 											<input type="email" name="email" id="email" placeholder="Email" />
