--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Insider's guide on how to get into medical school</h1>
+								<h1>Insider's Guide on how to get into medical school</h1>
 								<p>Admission's dissected is an audio series created by two medical students, Omar and Shaan. They cumitavely have spent years successfully applying into medical school, sat and voted on the admission's committee, and reviewed hundreds of medical school applicants. Each episode provides a short but detailed insight into everything you need to do to get into a medical school. bla bla</p>
 							</header>
 							<section class="tiles">
